--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@
                     <div class="form-group">
                         <label>Loại sản phẩm:</label>
                         <select id="productType">
+                            <option value="Đế L">Đế S</option>
                             <option value="Đế S">Đế S</option>
                             <option value="Phô Mai L">Phô Mai L</option>
                             <option value="Phô Mai S">Phô Mai S</option>
@@ -551,7 +552,30 @@
                             <option value="Dầu ăn">Dầu ăn</option>
                             <option value="Thanh Cua">Thanh Cua</option>
                             <option value="Ba Rọi">Ba Rọi</option>
-                            <option value="Mì Ý">Mì Ý</option>  
+                            <option value="Mì Ý">Mì Ý</option>
+                            <option value="Giấy ăn">Giấy ăn</option>
+                            <option value="Hộp đen">Hộp đen</option>
+                            <option value="Nĩa nhựa">Nĩa nhựa</option>
+                            <option value="Bill">Bill</option>
+                            <option value="Vàng pizza">Vàng pizza</option>
+                            <option value="Ống hút">Ống hút</option>
+                            <option value="Hộp lớn">Hộp lớn</option>
+                            <option value="Hộp nhỏ">Hộp nhỏ</option>
+                            <option value="Dầu giấm">Dầu giấm</option>
+                            <option value="Mayo xanh">Mayo xanh</option>
+                            <option value="Bơ">Bơ</option>
+                            <option value="Mayo hủ">Mayo hủ</option>
+                            <option value="Khè gà">Khè gà</option>
+                            <option value="Salami">Salami</option>
+                            <option value="Lạp xưởng">Lạp xưởng</option>
+                            <option value="Bánh mì">Bánh mì</option>
+                            <option value="Tương chai">Tương chai</option>
+                            <option value="Tương bịch">Tương bịch</option>
+                            <option value="Trà Chanh Gói">Trà Chanh Gói</option>
+                            <option value="Trà Đào Gói">Trà Đào Gói</option>    
+                            <option value="Mứt đào">Mứt đào</option>
+                            <option value="Miếng đào">Miếng đào</option>
+                            <option value="Đá me">Đá me</option>  
                         </select>
                     </div>
                     <div class="form-group">
@@ -590,7 +614,8 @@
             "Đế L", "Đế S", "PML", "PMS", "Bò Pz", "Bò Mì", "Gà", "Tôm", "Mực",
             "XXH", "XXĐ", "Cá Ngừ", "Ba Rọi", "Bò Sốt Cay", "Thanh Cua", "SLM",
             "Phô Mai Tươi", "Bông Cải Xanh", "Nấm", "Coca Chai", "Coca Lon",
-            "Nước Suối", "Gà Lắc", "Gà Rán", "XX Chiên xù", "Dầu ăn"
+            "Nước Suối", "Gà Lắc", "Gà Rán", "XX Chiên xù", "Dầu ăn", "Bắp", "KTC", 
+            "Sốt sữa", "Mì Ý", "Sốt cà", "Dầu ăn"
         ];
 
         const scriptURL = 'https://script.google.com/macros/s/AKfycbxjKyz3Ektiui9dxUTS4NYXyLTHLr0w7dhlkbDmqGOQ7OeubIBD7QH3MYol5CYYBFqqnA/exec';
