--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         <div class="main-screen" id="mainScreen">
             <div class="current-info">
                 Ngày: <span id="currentDate"></span> | Người nhập: <span id="currentUser"></span>
-                <button class="btn btn-logout" onclick="logout()">Đăng xuất</button>
+                <button class="btn btn-logout btn-small" onclick="logout()">Đăng xuất</button>
             </div>
 
             <div class="menu-grid" id="menuGrid">
