--- a/index.html
+++ b/index.html
@@ -696,7 +696,8 @@
             ],
             "Bao bì & vật dụng": [
                 'Bao 1 món (kg)', 'Bao cân bò (kg)', 'Bao cân mì (kg)', 'Bì vàng (kg)', 'Bao Pizza Lớn (kg)',
-                'Bao rác (kg)', 'Dây thun (bịch)', 'Ly nhựa (lốc)', 'Bao Đế L (kg)', 'Bao Đế S (kg)', 'Giấy nến', 'Giấy KTC'
+                'Bao rác (kg)', 'Dây thun (bịch)', 'Ly nhựa (lốc)', 'Bao Đế L (kg)', 'Bao Đế S (kg)', 'Giấy nến', 'Giấy KTC',
+                'Thùng L', 'Thùng S'
             ],
             "Đồ uống & bánh": [
                 'Coca chai', 'Coca lon', 'Nước suối', 'Bia Blance', 'Bia Quy Nhơn', 'Bánh mì'
