--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
         .category-header {
             padding: 16px 20px;
-            background: #667eea;
+            background: #6c757d;
             color: white;
             cursor: pointer;
             display: flex;
@@ -260,14 +260,9 @@
         }
 
         .category-header:hover {
-            background: #5568d3;
+            background: #5a6268;
         }
 
-        .category-header.cat-thanh-pham { background: #e74c3c; }
-        .category-header.cat-nguyen-lieu { background: #3498db; }
-        .category-header.cat-gia-vi { background: #27ae60; }
-        .category-header.cat-bao-bi { background: #f39c12; }
-        .category-header.cat-do-uong { background: #9b59b6; }
 
         .category-title {
             font-size: 18px;
@@ -690,11 +685,13 @@
         "Gia vị & nguyên liệu khô": [
             'Men (bì)', 'Bột (bao)', 'Đường (bì)', 'Muối (bì)', 'Xì dầu (chai)', 'Rượu (chai)',
             'Tiêu', 'Dầu ăn (can)', 'Dầu Hào (chai)','Mì Ý Nguyên', 'Bắp (Kg)', 'Mayo nhỏ', 'Mayo lớn', 'Bơ', 
-            'Cà chua paste', 'Bột chiên gà (bịch)', 'Bột phô mai lắc gà'
+            'Cà chua paste', 'Bột chiên gà (bịch)', 'Bột phô mai lắc gà', 'Tương ớt (bịch)', 'Tương cà (bịch)',
+            'Tương ớt (chai)', 'Tương cà (chai)'
         ],
         "Bao bì & vật dụng": [
             'Bao 1 món (kg)', 'Bao cân bò (kg)', 'Bao cân mì (kg)', 'Bì vàng (kg)', 'Bao Pizza Lớn (kg)',
-            'Bao rác (kg)', 'Dây thun (bịch)', 'Ly nhựa (lốc)', 'Bao Đế L (kg)', 'Bao Đế S (kg)', 'Giấy nến', 'Giấy KTC', 'Thùng L','Thùng S'
+            'Bao rác (kg)', 'Dây thun (bịch)', 'Ly nhựa (lốc)', 'Bao Đế L (kg)', 'Bao Đế S (kg)', 'Giấy nến', 
+            'Giấy KTC', 'Thùng L','Thùng S', 'Hộp đen (lốc)', 'Giấy ăn (lốc)', 'Hộp L', 'Hộp S'
         ],
         "Đồ uống & bánh": [
             'Coca chai', 'Coca lon', 'Nước suối', 'Bia Blance', 'Bia Quy Nhơn', 'Bánh mì'
